# heig-base

./: .gitignore  .tool-versions  README.md  main.py  main.qmd  pyproject.toml
templates/: heig.scss  heig_quarto_template.docx
