[project]
name = "heig-base"
version = "1.0.0"
description = "HEIG-VD Base Project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "arcticdb",
    "chardet",
    "coolprop",
    "dataclasses",
    "deap",
    "fastparquet",
    "h5py",
    "ipykernel",
    "ipywidgets",
    "jupyter",
    "jupyterlab",
    "kaleido==0.2.1",
    "matplotlib",
    "numpy",
    "pandas",
    "plotly",
    "polars",
    "quarto",
    "scikit-learn",
    "scipy",
    "seaborn",
    "statsmodels",
    "tabulate",
    "tqdm",
    "uncertainties",
    "unidecode",
]
